# action-sqlfluff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml  renovate.json  requirements.setup.txt  requirements.txt  script.sh  to-rdjson.jq
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: contributors-list.yml  depup.yml  dockerimage.yml  labels.yml  release.yml  reviewdog.yml  test.yml
requirements/: requirements.sqlfluff-0.8.txt  requirements.txt
resources/dummy_profiles/: profiles.yml
testdata/test_failed_dbt/: .sqlfluff  .sqlfluff.bigquery  .sqlfluff.postgres  .sqlfluff.redshift  .sqlfluff.snowflake  .sqlfluff.spark  dbt_project.yml  extra_requirements-1.3.txt  extra_requirements-1.4.txt  extra_requirements-1.6.txt  extra_requirements-1.7.txt  extra_requirements-1.8.txt  extra_requirements.txt  requirements.txt  setup.sh
testdata/test_failed_dbt/macros/: get_custom_schema.sql
testdata/test_failed_dbt/models/staging/: staging_01.sql  staging_02.sql  staging_03.sql  staging_test.sql  staging_test02.sql
testdata/test_failed_dbt/profiles/: profiles.yml
